# Tracking_ToolBox

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
examples/: basic_usage.py
src/tracking_toolbox/: __init__.py
src/tracking_toolbox/core/: base_locator.py  base_propagator.py
src/tracking_toolbox/locators/: cross_correlation.py  gaussian_2d.py  parabola_2d.py
src/tracking_toolbox/propagators/: direct.py  max_intensity.py
src/tracking_toolbox/trackers/: iterative_tracker.py
src/tracking_toolbox/utils/: dataframe_utils.py
tests/: test_tracking_accuracy.py
tests/analysis/: accuracy_metrics.py  visualization.py
tests/synthetic/: spot_generator.py  trajectory_generator.py
